--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "puppeteer-core": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && aws s3 sync build/ s3://randomwebsite.xyz --acl public-read"
+    "deploy": "npm run build && aws s3 sync build/ s3://randomwebsite.xyz --acl public-read",
+    "pdf": "node puppeteer.js"
   },
   "eslintConfig": {
     "extends": "react-app"
