--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && aws s3 sync build/ s3://randomwebsite.xyz --acl public-read",
+    "deploy": "npm run build && aws s3 sync --delete build/ s3://randomwebsite.xyz --profile cvPierrevautherinWebapp",
     "pdf": "node puppeteer.js"
   },
   "eslintConfig": {
