--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,7 @@
     "es6": true,
     "jest": true
   },
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb"
-  ],
+  "extends": ["plugin:react/recommended", "airbnb"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
@@ -19,11 +16,10 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {
     "react/jsx-props-no-spreading": "off",
-    "semi": ["error", "never"]
+    "semi": ["error", "never"],
+    "comma-dangle": "off"
   }
 }
